--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </head>
 <body class="container">
     <!-- alt + shift + f: identação-->
+    <a href="curriculo.pdf" target="_blank">Imprimir</a>
     <h2 class="text-center">Marina Erzsebet Szöllösy</h2>
     <h4 class="text-center">São Paulo - SP</h4>
 
